<resources>
   <string name="app_name">shamsulAddressBook</string>
   <string name="menuitem_edit">Edit</string>
   <string name="menuitem_delete">Delete</string>
   <string name="hint_name_required">Name (Required)</string>
   <string name="hint_email">E-Mail</string>
   <string name="hint_phone">Home Phone</string>
   <string name="hint_phone1">Work Phone</string>
   <string name="hint_phone2">Cell Phone</string>
   <string name="hint_street">Street</string>
   <string name="hint_city">City</string>
   <string name="hint_province">Province</string>
   <string name="hint_postal_code">Postal Code</string>
   <string name="label_name">Name:</string>
   <string name="label_email">E-Mail:</string>
   <string name="label_phone">Home Phone:</string>
   <string name="label_phone1">Work Phone:</string>
   <string name="label_phone2">Cell Phone:</string>
   <string name="label_street">Street:</string>
   <string name="label_city">City:</string>
   <string name="label_state">State:</string>
   <string name="label_zip">Zip:</string>
   <string name="confirm_title">Are You Sure?</string>
   <string name="confirm_message">This will permanently delete the contact</string>
   <string name="button_cancel">Cancel</string>
   <string name="button_delete">Delete</string>
   <string name="contact_added">Contact added successfully</string>
   <string name="contact_not_added">Contact was not added due to an error</string>
   <string name="contact_updated">Contact updated</string>
   <string name="contact_not_updated">Contact was not updated due to an error</string>
   <string name="invalid_query_uri">Invalid query Uri: </string>
   <string name="invalid_insert_uri">Invalid insert Uri: </string>
   <string name="invalid_update_uri">Invalid update Uri: </string>
   <string name="invalid_delete_uri">Invalid delete Uri: </string>
   <string name="insert_failed">Insert failed:</string>
   <string name="shamsul_address_book">Shamsul Address Book</string>
   <string name="username_label">Username</string>
   <string name="password_label">Password</string>
   <string name="username" />
   <string name="password" />
    <string name="login_btn">Login</string>
   <string name="uid"></string>
    <string name="exit_btn">EXIT</string>
    <string name="exit_btn1">EXIT</string>
</resources>
