<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText"
               android:hint="@string/hint_name_required"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPersonName"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homephoneTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText2"
               android:hint="@string/hint_phone"
               android:imeOptions="actionNext"
               android:inputType="phone"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/workphoneTextInputLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText8"
                android:hint="@string/hint_phone1"
                android:imeOptions="actionNext"
                android:inputType="phone"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/cellphoneTextInputLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText9"
                android:hint="@string/hint_phone2"
                android:imeOptions="actionNext"
                android:inputType="phone"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText3"
               android:hint="@string/hint_email"
               android:imeOptions="actionNext"
               android:inputType="textEmailAddress"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/streetTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText4"
               android:hint="@string/hint_street"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPostalAddress"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cityTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText5"
               android:hint="@string/hint_city"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPostalAddress"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/provinceTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText6"
               android:hint="@string/hint_province"
               android:imeOptions="actionNext"
               android:inputType="textPostalAddress|textCapCharacters"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postalCodeTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText7"
               android:hint="@string/hint_postal_code"
               android:imeOptions="actionDone"
               android:inputType="number"/>
         </android.support.design.widget.TextInputLayout>
      </LinearLayout>
   </ScrollView>

   <android.support.design.widget.FloatingActionButton
      android:id="@+id/saveFloatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="top|end"
      android:layout_margin="@dimen/fab_margin"
      android:src="@drawable/ic_save_24dp"/>

</FrameLayout>
